# austin-tui

./: pyproject.toml
.github/workflows/: tests.yml
austin_tui/: __init__.py  __main__.py  adapters.py  controller.py  mypy_plugin.py  picker.py
austin_tui/model/: austin.py  system.py
austin_tui/view/: __init__.py  austin.py  palette.py  picker.austinui
austin_tui/widgets/: __init__.py  box.py  catalog.py  command_bar.py  graph.py  label.py  markup.py  scroll.py  selector.py  table.py  window.py
tests/: mcurses.py  test_cli.py  test_fmt_time.py  test_view.py  test_widgets.py
